syntax = "proto3";

package helloworld;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/carmel/go-micro/example/helloworld";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply)  {
        option (google.api.http) = {
            get: "/helloworld/{name}",
        };
  }
  // Sends a greeting
  rpc SayHelloStream (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int32 age = 2 [(validate.rules).int32 = {gt:0, lt: 120}];
  string phone = 3 [(validate.rules).string.len = 11];
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
